Ajustes : Layout más fino, alertas input de reservas completo y fix de scrollbar reserves.jsx

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -10,17 +10,14 @@ body {
 nav {
     display: flex;
     align-items: center;
-    /* Centra verticalmente los elementos dentro del nav */
     justify-content: space-between;
-    /* Espacio entre el logo a la izquierda y los enlaces al centro */
     position: fixed;
     width: 100%;
-    height: 60px;
-    /* Altura ajustada de la barra */
+    height: 5.5vh; /* Reducir la altura de la barra de navegación */
     z-index: 1000;
     background-color: rgb(24, 24, 24);
-    padding: 0 20px;
-    /* Espacio horizontal */
+    padding: 0 15px; /* Reducir el padding horizontal */
+    margin-bottom: 2vh; /* Mantener el margen inferior relativo */
 }
 
 /* Estilo para el contenedor del logo */
@@ -32,10 +29,9 @@ nav {
 
 /* Estilo del logo */
 .logo {
-    width: 75px;
-    height: 75px;
+    width: 60px; /* Reducir el tamaño del logo */
+    height: 60px; /* Reducir el tamaño del logo */
     transition: filter 0.3s ease, transform 0.3s ease;
-    /* Suaviza el cambio de color y escala */
 }
 
 /* Hover en el logo */
@@ -47,10 +43,6 @@ nav {
     cursor: pointer;
     /* Cambia el cursor al símbolo de una mano */
 }
-
-
-
-
 /* Contenedor de los enlaces */
 .nav-links {
     display: flex;
@@ -98,6 +90,7 @@ main {
     max-width: 100%;
     background-color: white;
     margin: 0 auto;
+    padding-top:5.5vh; /* Añadir padding-top para separar el contenido del nav */
 }
 
 /* Estilo general del dropdown */
